[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Michael Kaminski <mkaminski1337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
python-dotenv = "^1.0.1"
github = "^1.2.7"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
